--- a/Views/TourSites/Details.cshtml
+++ b/Views/TourSites/Details.cshtml
@@ -11,25 +11,26 @@
 
 <div>
     <hr />
+    <div class="form-group col-4">
+        @{
+            if (Model.ThumbnailID != null)
+            {
+
+                var file = await _context.UploadedFiles.FindAsync(Model.ThumbnailID);
+                if (file != null)
+                {
+                    <label class="control-label h2"></label>
+                    var base64 = Convert.ToBase64String(file.Bytes);
+                    var Image = String.Format("data:image/gif;base64,{0}", base64);
+                    <img src="@Image" alt="" class="img-fluid">
+                }
+            }
+        }
+    </div>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <div class="form-group col-4">
-            @{
-                if (Model.ThumbnailID != null)
-                {
-
-                    var file = await _context.UploadedFiles.FindAsync(Model.ThumbnailID);
-                    if (file != null) {
-                        <label class="control-label h2"></label>
-                        var base64 = Convert.ToBase64String(file.Bytes);
-                        var Image = String.Format("data:image/gif;base64,{0}", base64);
-                        <img src="@Image" alt="" class="img-fluid">
-                    }
-                }
-            }
-        </div>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
