--- a/Views/TourSites/Index.cshtml
+++ b/Views/TourSites/Index.cshtml
@@ -13,44 +13,19 @@
 <h1>Tours</h1>
 <a asp-action="ListView">List View</a>        
 <br />
+<b>Click on a site to learn more </b>
+<br />
+<label id="placeName" hidden>Place</label>
+
+<a asp-action="Details" hidden id="tourId">Details</a>
+<br />
 
 @if (authorized1.Succeeded)
 {
     <a asp-action="AddNewTour">Add New Tour</a>
 }
 
-<form asp-action="PassToDetails">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
-
-        <thead>
-            <tr>
-                <td>
-                    <div class="form-group">
-                        <label asp-for="Id" class="control-label">Id</label>
-                        <input asp-for="Id" id="tourId" class="form-control" value="" />
-                    </div>
-                </td>
-                @* <td> *@
-                @*     <div class="form-group"> *@
-                @*         <label asp-for="Lattitude" class="control-label">Latitude</label> *@
-                @*         <input asp-for="Lattitude" id="lat" class="form-control" value="" /> *@
-                @*         <span asp-validation-for="Lattitude" class="text-danger"></span> *@
-                @*     </div> *@
-                @* </td> *@
-
-                <td>
-                    <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-primary" />
-                    </div>
-
-                </td>
-            </tr>
-
-        </thead>
-    </table>
-</form>
 @section Map {
     <div id="viewDiv"></div>
 }
