--- a/Views/File/Delete.cshtml
+++ b/Views/File/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.FileName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FileType)
+            @Html.DisplayNameFor(model => model.FileExtension)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FileType)
+            @Html.DisplayFor(model => model.FileExtension)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Embed)
