--- a/Views/TourSites/Details.cshtml
+++ b/Views/TourSites/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TourWebsite.Data
-@model TourWebsite.Models.TourSite
+@model ValueTuple<TourWebsite.Models.TourSite, bool>
 
 @inject TourWebsiteContext _context
 
@@ -7,16 +7,26 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+
+@if(Model.Item2)
+{
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#myModal').modal('hide');">×</button>
+        <h2>Details</h2>
+    </div>
+}
+else {
+    <h1>Details</h1>
+}
 
 <div>
     <hr />
     <div class="form-group col-4">
         @{
-            if (Model.ThumbnailID != null)
+            if (Model.Item1.ThumbnailID != null)
             {
 
-                var file = await _context.UploadedFiles.FindAsync(Model.ThumbnailID);
+                var file = await _context.UploadedFiles.FindAsync(Model.Item1.ThumbnailID);
                 if (file != null)
                 {
                     <label class="control-label h2"></label>
@@ -29,32 +39,32 @@
     </div>
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.Item1.Title)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.Item1.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Item1.Description)
         </dt>
         <dd class = "col-sm-10">
-            @Html.Raw(Model.Description)
+            @Html.Raw(Model.Item1.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Longitude)
+            @Html.DisplayNameFor(model => model.Item1.Longitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Longitude)
+            @Html.DisplayFor(model => model.Item1.Longitude)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lattitude)
+            @Html.DisplayNameFor(model => model.Item1.Lattitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lattitude)
+            @Html.DisplayFor(model => model.Item1.Lattitude)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Item1.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
