fixed duplicate editors

--- a/Views/Role/UserList.cshtml
+++ b/Views/Role/UserList.cshtml
@@ -46,7 +46,8 @@
                         if (typeof (emailBox) != 'undefined' && emailBox) {
                         emailBox.value = `@item.Email`;
     
-                        }
+                        }   
+                        $('#myModal').modal('hide');
 
 
                         "
