--- a/Views/Role/UserList.cshtml
+++ b/Views/Role/UserList.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#myModal').modal('hide');">×</button>
+    <button class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#myModal').modal('hide');">×</button>
     <h2>Users</h2>
 </div>
 
