--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,3 +29,38 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+#myModalContent {
+
+    margin:20px;
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
+    margin:20px;
+    width: 50px;
+    height: 50px;
+    font-size: 0;
+    border: 0;
+    background-color:transparent
+}
+
+    .close:before,
+    .close:after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 5px;
+        height: 20px;
+        background-color: darkgray;
+        transform: rotate(45deg) translate(-50%, -50%);
+        transform-origin: top left;
+        content: '';
+    }
+
+    .close:after {
+        transform: rotate(-45deg) translate(-50%, -50%);
+    }
